--- a/Webpage/index.html
+++ b/Webpage/index.html
@@ -2,19 +2,99 @@
   <head>
     <title>Index</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
+	<link rel="stylesheet" href="./des.css" type="text/css">
     <!--link rel="shortcut icon" href="favicon.ico" type="image/x-icon"!-->
     <!--link rel="icon" href="favicon.ico" type="image/x-icon"!-->
   </head>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"> </script>
-  <script>
-  </script>
-  <style>
-  ::selection{
-	background: #f00;
-	color: #C00;
+  <script type="module">
+	var cb = document.getElementById("colorblind");
+	var lv = document.getElementById("lowvision");
+	var og = document.getElementById("original");
+
+
+	function colorblind(){
+		if (cb.className == "top"){
+			document.body.setAttribute("style", "-webkit-filter:grayscale(100%); backdrop-filter:grayscale(100%); background: #C40");
+			document.querySelector(".topBar").setAttribute("style", "-webkit-filter: grayscale(100%);");
+			document.querySelector(".coloredText1").setAttribute("style", "-webkit-filter: grayscale(100%);");
+			var sth = document.querySelector(".top-selected");
+			sth.className = "top";
+			cb.className = "top-selected";
+		}
+		else{
+			return;
+		}
 	}
-  </style>
-  <body style = "margin: 0; background: #CC4400; text-align: center">
-	<h1 style = "margin-top: 30px; color: #777700; font-size: 70px">PleaseDoNotAccess .io</h1>
+
+	$("#colorblind").click(colorblind);
+
+	function lowvision(){
+		if (lv.className == "top"){
+			document.body.setAttribute("style", "-webkit-filter: blur(3px) ;background: #C40");
+			//document.querySelector(".topBar").setAttribute("style", "-webkit-filter: grayscale(0%);");
+			document.querySelector(".coloredText1").setAttribute("style", "-webkit-filter: grayscale(0%);");
+			var sth = document.querySelector(".top-selected");
+			sth.className = "top";
+			lv.className = "top-selected";
+		}
+		else{
+			return;
+		}
+	}
+
+	$("#lowvision").click(lowvision);
+
+	function original(){
+		if (og.className == "top"){
+			document.body.setAttribute("style", "-webkit-filter:blur(0px); background: #C40;");
+			document.querySelector(".coloredText1").setAttribute("style", "-webkit-filter: grayscale(0%);");
+			var sth = document.querySelector(".top-selected");
+			sth.className = "top";
+			og.className = "top-selected";
+		}
+		else{
+			return;
+		}
+	}
+
+	$("#original").click(original);
+  </script>
+  <body style = "background: #CC4400;">
+    <div class = "topBar" style = "position: relative">
+	 <div class="top-selected" id = "original">Original Intend</div>
+	  <div class="top" id = "colorblind">Color Blind</div>
+	  <div class="top" id = "lowvision">Low Vision</div>
+	</div>
+	<h1 class = "coloredText1">PleaseDoNotAccess.io</h1>
+	<div style = "width: 100%; height: auto;">
+		<div class = "whitext">
+			Hello? Welcome to <span style="color: #00FFFF; text-decoration: underline">PleaseDoNotAccess.io</span>. This project was created to enhance people's understanding
+			about web accessibility. We specifically aim to provide you with an opportunity to consider 
+			web accessibility from the perspective of visually impaired individuals.
+			</br>
+			</br>
+			Before you press the start button below to experience examples of severely compromised web 
+			accessibility, we'd like to explain a few helpful things.
+			</br>
+			</br> 1. By pressing the menu bar at the 
+			top, you can switch to views designed for individuals with different visual conditions, 
+			such as color blindness, red-green color blindness, and low vision. Pressing the front button 
+			will return you to the initial screen. We recommend choosing one of the options before starting 
+			the experience for a more realistic encounter.
+			</br>
+			</br> 2. Additionally, we encourage you to navigate through 
+			the pages using only the keyboard, such as the tab key and arrow keys, instead of using the mouse. 
+			This is to make the experience more similar to the actual conditions faced by visually impaired individuals.
+			</br>
+			</br>
+			Are you ready? Then let's press the start button!
+		</div>
+	</div>
+	<div style = "margin: 30 100 0 100;">
+		<div style = "width: 350px; height: auto; display: inline-block; margin: 0 0 30 0;">
+			<div class = "indexbutton"> Start </div>
+		<div>
+	</div>
   </body>
 </html>
