--- a/Webpage/problem5.html
+++ b/Webpage/problem5.html
@@ -62,9 +62,9 @@
   </script>
   <body style = "background: #CC4400;">
     <div class = "topBar" style = "position: relative">
-	 <div class="top-selected" tabIndex="1" id = "original">Original Intend</div>
-	  <div class="top" tabIndex="2" id = "colorblind">Color Blind</div>
-	  <div class="top" tabIndex="3" id = "lowvision">Low Vision</div>
+	 <div class="top-selected" id = "original">Original Intend</div>
+	  <div class="top" id = "colorblind">Color Blind</div>
+	  <div class="top" id = "lowvision">Low Vision</div>
 	</div>
 	<h1 class = "coloredText1">PleaseDoNotAccess.io</h1>
 	<div style = "width: 100%; height: auto;">
