add problem format file

--- a/Webpage/delayedimageload.html
+++ b/Webpage/delayedimageload.html
@@ -65,9 +65,9 @@
   </script>
   <body style = "background: #CC4400;">
     <div class = "topBar">
-	 <div class="top-selected" id = "original">Original Intend</div>
-	  <div class="top" id = "colorblind">Color Blind</div>
-	  <div class="top" id = "lowvision">Low Vision</div>
+	  <div class="top-selected" tabIndex="1" id = "original">Original Intend</div>
+	  <div class="top" tabIndex="2" id = "colorblind">Color Blind</div>
+	  <div class="top" tabIndex="3" id = "lowvision">Low Vision</div>
 	</div>
 	<div class = "imagewrapper" style="height: 360px;">
 		<div class = "loader">
