--- a/Webpage/problem_format.html
+++ b/Webpage/problem_format.html
@@ -17,7 +17,7 @@
 		if (cb.className == "top"){
 			document.body.setAttribute("style", "-webkit-filter:grayscale(100%); backdrop-filter:grayscale(100%); background: #C40");
 			document.querySelector(".topBar").setAttribute("style", "-webkit-filter: grayscale(100%);");
-			document.querySelector(".coloredText1").setAttribute("style", "-webkit-filter: grayscale(100%);");
+			//document.querySelector(".coloredText1").setAttribute("style", "-webkit-filter: grayscale(100%);");
 			var sth = document.querySelector(".top-selected");
 			sth.className = "top";
 			cb.className = "top-selected";
@@ -33,7 +33,7 @@
 		if (lv.className == "top"){
 			document.body.setAttribute("style", "-webkit-filter: blur(3px) ;background: #C40");
 			//document.querySelector(".topBar").setAttribute("style", "-webkit-filter: grayscale(0%);");
-			document.querySelector(".coloredText1").setAttribute("style", "-webkit-filter: grayscale(0%);");
+			//document.querySelector(".coloredText1").setAttribute("style", "-webkit-filter: grayscale(0%);");
 			var sth = document.querySelector(".top-selected");
 			sth.className = "top";
 			lv.className = "top-selected";
@@ -48,7 +48,7 @@
 	function original(){
 		if (og.className == "top"){
 			document.body.setAttribute("style", "-webkit-filter:blur(0px); background: #C40;");
-			document.querySelector(".coloredText1").setAttribute("style", "-webkit-filter: grayscale(0%);");
+			//document.querySelector(".coloredText1").setAttribute("style", "-webkit-filter: grayscale(0%);");
 			var sth = document.querySelector(".top-selected");
 			sth.className = "top";
 			og.className = "top-selected";
@@ -59,6 +59,13 @@
 	}
 
 	$("#original").click(original);
+	
+	function jsMove(){
+		var baselink = "/labyrinth/un1"
+		var pc = document.getElementById('passcode').value;
+		alert("Answer Submitted. 404 Error means wrong answer.");
+		window.open(baselink.concat(pc));
+	}
   </script>
   <body style = "background: #CC4400;">
     <div class = "topBar" style = "position: relative">
@@ -66,35 +73,17 @@
 	  <div class="top" id = "colorblind">Color Blind</div>
 	  <div class="top" id = "lowvision">Low Vision</div>
 	</div>
-	<h1 class = "coloredText1">PleaseDoNotAccess.io</h1>
+	<h2 style = "font-size: 30px">Problem N</h2>
 	<div style = "width: 100%; height: auto;">
-		<div class = "whitext">
-			Hello? Welcome to <span style="color: #00FFFF; text-decoration: underline">PleaseDoNotAccess.io</span>. This project was created to enhance people's understanding
-			about web accessibility. We specifically aim to provide you with an opportunity to consider 
-			web accessibility from the perspective of visually impaired individuals.
-			</br>
-			</br>
-			Before you press the start button below to experience examples of severely compromised web 
-			accessibility, we'd like to explain a few helpful things.
-			</br>
-			</br> 1. By pressing the menu bar at the 
-			top, you can switch to views designed for individuals with different visual conditions, 
-			such as color blindness, red-green color blindness, and low vision. Pressing the front button 
-			will return you to the initial screen. We recommend choosing one of the options before starting 
-			the experience for a more realistic encounter.
-			</br>
-			</br> 2. Additionally, we encourage you to navigate through 
-			the pages using only the keyboard, such as the tab key and arrow keys, instead of using the mouse. 
-			This is to make the experience more similar to the actual conditions faced by visually impaired individuals.
-			</br>
-			</br>
-			Are you ready? Then let's press the start button!
+		<div class = "coloredText4">
+			여기에 텍스트 입력
 		</div>
 	</div>
-	<div style = "margin: 30 100 0 100;">
-		<div style = "width: 350px; height: auto; display: inline-block; margin: 0 0 30 0;">
-			<div class = "indexbutton"> Start </div>
-		<div>
+		<div style = "margin-top: 30; padding-bottom: 30;">
+		<form autocomplete='off' onsubmit = "jsMove();">
+		  <input id = 'passcode' type='text' required><br><br>
+		  <input type = 'submit' value = 'Submit'>
+		</form>
 	</div>
   </body>
 </html>
