--- a/Webpage/problem2.html
+++ b/Webpage/problem2.html
@@ -61,11 +61,19 @@
 	$("#original").click(original);
 	
 	function jsMove(){
-		var baselink = "/labyrinth/un1"
+		//var baselink = "/Webpage/un1"
 		var pc = document.getElementById('passcode').value;
-		alert("Answer Submitted. 404 Error means wrong answer.");
-		window.open(baselink.concat(pc));
+		if (pc){
+			window.alert("Answer Submitted. 404 Error means wrong answer. "+pc);
+		}
+		else {
+			window.alert("Please fill the form.");
+		}
+		
+		//window.open(baselink.concat(pc));
 	}
+	
+	$("#sbtn").click(jsMove);
   </script>
   <body style = "background: #CC4400;">
     <div class = "topBar" style = "position: relative">
@@ -91,10 +99,10 @@
 		
 	</div>
 	<div style = "margin-top: 30; padding-bottom: 30;">
-		<form autocomplete='off' onsubmit = "jsMove();">
+		<form autocomplete='off' id = 'submitform'>
 		  <input id = 'passcode' type='text' required><br><br>
-		  <input type = 'submit' value = 'Submit'>
 		</form>
+		<button type = 'submit' id = 'sbtn' form = 'submitform'>Submit</button>
 	</div>
   </body>
 </html>
