--- a/Webpage/problem2.html
+++ b/Webpage/problem2.html
@@ -85,15 +85,44 @@
 	<div style = "width: 100%; height: auto;">
 		<div class = "coloredText3">
 			<p>
-			여기에 내용 입력
+			Web accessibility refers to efforts and principles aimed at enabling equal access to digital technology and content for all users. This goal encompasses providing easy access not only for people with disabilities but also for the elderly and those without disabilities.
+ 
+To achieve web accessibility, there are several key principles:
+ 
+Firstly, alternative options mean that all content should be substitutable with text or other forms. Providing alternative text for images or text descriptions for video or audio content allows users with visual or auditory impairments to access information.
+ 
+Secondly, user interface elements should be clear and predictable. Elements such as buttons or links should operate consistently and be designed to behave as users expect, enabling easy navigation and use of functions.
+ 
+Thirdly, context should be clear in relation to the purpose of the content. Information should be provided clearly so that users can understand and utilize it effectively.
+ 
+These accessibility principles allow the web to be tailored to accommodate the diverse ways in which users access and interact with it.
+ 
+Additional considerations for web accessibility include:
+ 
+Alternative Text: Providing alternative text for images is crucial. For instance, including alternative text along with a logo on a webpage allows screen readers to describe the logo, such as 'Logo for Web Accessibility.'
+ 
+Keyboard Navigation: Designing all functionalities to be accessible using the keyboard alone. This means users should be able to navigate and activate each link and button using the 'Tab' key.
+ 
+Color Contrast: Ensuring sufficient color contrast when using colors to convey information. Inadequate contrast between text and background colors can make content difficult to read for individuals with visual impairments. It's essential to meet at least the minimum color contrast standards as per WCAG AA guidelines.
+ 
+Diverse Media Usage: Providing text-based alternative content for audio or video content. This helps users with visual or hearing impairments.
+ 
+Clear Labeling of Form Fields: Input forms or fields should be clearly labeled. Even if they are not visually apparent, it's important for users utilizing screen readers to understand what each form field represents.
+
+Screen Resolution and Layout Flexibility: Websites should appear and function well across various screen sizes and devices. Responsive design or flexible layouts can provide an optimal experience on different devices.
+ 
+Consideration for Time Constraints: It's important to consider providing users with enough time to comprehend and respond to information. For instance, supporting users by offering features to pause automatically changing content at regular intervals can assist these users.
+ 
+Web accessibility plays a crucial role in providing equal opportunities and experiences for all users. It's an aspect that needs to be considered both technically and in design, ensuring diverse users can effectively utilize the web.
+
 			</p>
 			<div class = "horizontalBar"></div>
 			<p>
 			Question: Which of the following is the most appropriate explanation for the term 'Web Accessibility"? </br>
-			<span>1. 여기에 선지 입력</span></br>
-			<span>2. 여기에 선지 입력</span></br>
-			<span>3. 여기에 선지 입력</span></br>
-			<span>4. 여기에 선지 입력</span></br>
+			<span>1. Web accessibility aims to provide easy access for people with disabilities and the elderly. </span></br>
+			<span>2. Elements like buttons or links should function consistently, allowing users to navigate easily and utilize functionalities. </span></br>
+			<span>3. Providing alternative text for images, videos, and content is an example of achieving web accessibility. </span></br>
+			<span>4. Using appropriate color contrasts for easy differentiation, employing readable fonts, and increasing font sizes are all examples of efforts toward web accessibility. </span></br>
 			</p>
 		</div>
 		
