--- a/Webpage/problem_format.html
+++ b/Webpage/problem_format.html
@@ -84,7 +84,22 @@
 	<h2 style = "font-size: 30px">Problem N</h2>
 	<div style = "width: 100%; height: auto;">
 		<div class = "coloredText4">
-			여기에 텍스트 입력
+			Keyboard accessibility refers to the ability for users to navigate and interact with websites or applications using the keyboard instead of a mouse. It's particularly beneficial for individuals with visual impairments or those who find it challenging to use a mouse, enhancing accessibility for all users.
+ 
+Keyboard accessibility is facilitated through various keyboard shortcuts and commands. Let me elaborate on some key functions:
+ 
+Tab Key: Pressing the Tab key allows users to navigate through different elements on a web page or software interface. It typically moves the focus between links, buttons, form fields, and other interactive elements. Shift + Tab allows backward navigation.
+ 
+Enter Key: The Enter key activates selected elements, such as links or buttons, and can also submit forms or confirm selections.
+ 
+Arrow Keys: The arrow keys—up, down, left, and right—are used for scrolling or selecting items within menus or lists. They are especially helpful for navigating dropdown menus or lists.
+ 
+Spacebar: The Spacebar is often used to activate or select the currently focused item. It's commonly utilized for scrolling pages or selecting items within a list.
+ 
+Esc Key: Pressing the Esc key typically closes modal windows or cancels the current action.
+ 
+These keyboard functionalities enable users to navigate, select, and interact with web content or applications effectively without relying on a mouse. They significantly contribute to improving accessibility for individuals with disabilities and enhance the overall user experience for everyone.
+
 		</div>
 	</div>
 		<div style = "margin-top: 30; padding-bottom: 30;">
