--- a/Webpage/problem2.html
+++ b/Webpage/problem2.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Index</title>
+    <title>Problem 2</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
 	<link rel="stylesheet" href="./des.css" type="text/css">
     <!--link rel="shortcut icon" href="favicon.ico" type="image/x-icon"!-->
@@ -85,43 +85,73 @@
 	<div style = "width: 100%; height: auto;">
 		<div class = "coloredText3">
 			<p>
-			Web accessibility refers to efforts and principles aimed at enabling equal access to digital technology and content for all users. This goal encompasses providing easy access not only for people with disabilities but also for the elderly and those without disabilities.
+			Web accessibility refers to efforts and principles aimed at enabling equal access 
+			to digital technology and content for all users. This goal encompasses providing 
+			easy access not only for people with disabilities but also for the elderly and those without disabilities.
  			</br>
 			To achieve web accessibility, there are several key principles:
  			</br>
-			Firstly, alternative options mean that all content should be substitutable with text or other forms. Providing alternative text for images or text descriptions for video or audio content allows users with visual or auditory impairments to access information.
+			First, there should be alternative options for all content.
+			It means that, all contents should be substitutable with text or other forms are needed. 
+			For example, providing alternative text for images or text descriptions for video or 
+			audio content allows users with visual or auditory impairments to access information.
  			</br>
-			Secondly, user interface elements should be clear and predictable. Elements such as buttons or links should operate consistently and be designed to behave as users expect, enabling easy navigation and use of functions.
+			Second, user interface elements should be clear and predictable. Elements such as buttons 
+			or links should operate consistently and be designed to behave as users expect, enabling 
+			easy navigation and use of functions.
 			</br>
-			Thirdly, context should be clear in relation to the purpose of the content. Information should be provided clearly so that users can understand and utilize it effectively.
+			Third, the content should be provided clearly so that users can read, understand and utilize it effectively.
+			For instance, even if there is only text on the screen, the colors on the screen seen by people with color 
+			blindness and those without color blindness can be significantly different.
+			Inadequate <b>contrast between the text and the background colors</b> can make content difficult to read 
+			for individuals with visual impairments. It's essential to meet at least the minimum color contrast 
+			standards as per WCAG AA guidelines. In addition, paying attention to the <b>arrangement of letters 
+			and the form of paragraphs</b> not only improves the page aesthetically but also increases the readability of the content.
+			
  			</br>
-			These accessibility principles allow the web to be tailored to accommodate the diverse ways in which users access and interact with it.
+			These accessibility principles allow the web to be tailored to accommodate the 
+			diverse ways in which users access and interact with it.
  			</br>
-			Additional considerations for web accessibility include:
+			<!--/br>
+			Considerations for web accessibility include:
  			</br>
-			Alternative Text: Providing alternative text for images is crucial. For instance, including alternative text along with a logo on a webpage allows screen readers to describe the logo, such as 'Logo for Web Accessibility.'
+			Alternative Text: Providing alternative text for images is crucial. For instance, including alternative 
+			text along with a logo on a webpage allows screen readers to describe the logo, such as 'Logo for Web Accessibility.'
 			</br> 
-			Keyboard Navigation: Designing all functionalities to be accessible using the keyboard alone. This means users should be able to navigate and activate each link and button using the 'Tab' key.
+			Keyboard Navigation: Designing all functionalities to be accessible using the keyboard alone. 
+			This means users should be able to navigate and activate each link and button using the 'Tab' key.
  			</br>
-			Color Contrast: Ensuring sufficient color contrast when using colors to convey information. Inadequate contrast between text and background colors can make content difficult to read for individuals with visual impairments. It's essential to meet at least the minimum color contrast standards as per WCAG AA guidelines.
+			<b>Color Contrast: Ensuring sufficient color contrast when using colors to convey information. 
+			Inadequate contrast between the text and the background colors can make content difficult to read 
+			for individuals with visual impairments. It's essential to meet at least the minimum color contrast 
+			standards as per WCAG AA guidelines.</b>
 			</br> 
-			Diverse Media Usage: Providing text-based alternative content for audio or video content. This helps users with visual or hearing impairments.
+			Diverse Media Usage: Providing text-based alternative content for audio or video content. 
+			This helps users with visual or hearing impairments.
 			</br> 
-			Clear Labeling of Form Fields: Input forms or fields should be clearly labeled. Even if they are not visually apparent, it's important for users utilizing screen readers to understand what each form field represents.
+			Clear Labeling of Form Fields: Input forms or fields should be clearly labeled. 
+			Even if they are not visually apparent, it's important for users utilizing screen readers 
+			to understand what each form field represents.
 			</br>
-			Screen Resolution and Layout Flexibility: Websites should appear and function well across various screen sizes and devices. Responsive design or flexible layouts can provide an optimal experience on different devices.
+			Screen Resolution and Layout Flexibility: Websites should appear and function well 
+			across various screen sizes and devices. Responsive design or flexible layouts 
+			can provide an optimal experience on different devices.
  			</br>
-			Consideration for Time Constraints: It's important to consider providing users with enough time to comprehend and respond to information. For instance, supporting users by offering features to pause automatically changing content at regular intervals can assist these users.
+			Consideration for Time Constraints: It's important to consider providing users with 
+			enough time to comprehend and respond to information. For instance, supporting users 
+			by offering features to pause automatically changing content at regular intervals can assist these users.
  			</br>
-			Web accessibility plays a crucial role in providing equal opportunities and experiences for all users. It's an aspect that needs to be considered both technically and in design, ensuring diverse users can effectively utilize the web.
+			Web accessibility plays a crucial role in providing equal opportunities and experiences 
+			for all users. It's an aspect that needs to be considered both technically and in design, 
+			ensuring diverse users can effectively utilize the web. <-->
 
 			</p>
 			<div class = "horizontalBar"></div>
 			<p>
 			Question: Which of the following is the most appropriate explanation for the term 'Web Accessibility"? </br>
-			<span>1. Web accessibility aims to provide easy access for people with disabilities and the elderly. </span></br>
-			<span>2. Elements like buttons or links should function consistently, allowing users to navigate easily and utilize functionalities. </span></br>
-			<span>3. Providing alternative text for images, videos, and content is an example of achieving web accessibility. </span></br>
+			<span>1. Web accessibility aims to provide easy access only for people with disabilities. </span></br>
+			<span>2. The most important thing when placing elements such as buttons or links is to place them in an aesthetically pleasing manner. </span></br>
+			<span>3. Alternative text for images, videos, and content is used to provide additional information of the content. </span></br>
 			<span>4. Using appropriate color contrasts for easy differentiation, employing readable fonts, and increasing font sizes are all examples of efforts toward web accessibility. </span></br>
 			</p>
 		</div>
