--- a/Webpage/problem3.html
+++ b/Webpage/problem3.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Index</title>
+    <title>Problem 3</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
 	<link rel="stylesheet" href="./des.css" type="text/css">
     <!--link rel="shortcut icon" href="favicon.ico" type="image/x-icon"!-->
@@ -84,15 +84,33 @@
 	<h2 style = "font-size: 30px">Problem 3</h2>
 	<div style = "width: 100%; height: auto;">
 		<div class = "coloredText4">
-			Screen readers vary in their ability to interpret and vocalize the CSS styling of a webpage. While some are adept at detecting and reading CSS, others predominantly rely on the unadorned HTML structure. This diversity can pose challenges when screen readers prioritize content for users. It becomes crucial to establish a consistent and well-organized HTML structure that aligns with the logical reading order from left to right and top to bottom, akin to the flow of content in a printed document.
+			Screen readers vary in their ability to interpret and vocalize the CSS styling of a webpage. 
+			While some are adept at detecting and reading CSS, others predominantly rely on the unadorned HTML structure. 
+			This diversity can pose challenges when screen readers prioritize content for users. It becomes 
+			crucial to establish a consistent and well-organized HTML structure that aligns with the logical 
+			reading order from left to right and top to bottom, akin to the flow of content in a printed document.
 			</br>
-			Understanding the nuances of how screen readers interpret CSS styling is paramount. Although some screen readers can extract meaning from CSS, ensuring a reliable and universally accessible experience necessitates an HTML structure that inherently conveys content hierarchy. This is particularly vital for users who heavily rely on unstyled HTML to comprehend the information presented.
+			Understanding the nuances of how screen readers interpret CSS styling is paramount. Although some 
+			screen readers can extract meaning from CSS, ensuring a reliable and universally accessible experience 
+			necessitates an HTML structure that inherently conveys content hierarchy. This is particularly vital 
+			for users who heavily rely on unstyled HTML to comprehend the information presented.
 			</br>
-			To circumvent potential challenges related to the reading order, developers should adhere to best practices in structuring HTML content. Employing semantic HTML elements, such as headings (&lt;h1&gt;, &lt;h2&gt;, etc.), paragraphs (&lt;p&gt;), and lists (&lt;ul&gt;, &lt;ol&gt;, &lt;li&gt;), contributes to a clear and well-defined document structure. These elements, when arranged logically, facilitate an intuitive reading experience for both screen readers that interpret CSS and those that primarily rely on unstyled HTML.
+			To circumvent potential challenges related to the reading order, developers should adhere to best 
+			practices in structuring HTML content. Employing semantic HTML elements, such as headings 
+			(&lt;h1&gt;, &lt;h2&gt;, etc.), paragraphs (&lt;p&gt;), and lists (&lt;ul&gt;, &lt;ol&gt;, &lt;li&gt;), 
+			contributes to a clear and well-defined document structure. These elements, when arranged logically, 
+			facilitate an intuitive reading experience for both screen readers that interpret CSS and those that 
+			primarily rely on unstyled HTML.
 			</br>
-			Moreover, it is imperative to test webpages across various screen readers to ensure a consistent and accessible user experience. By doing so, developers can identify and rectify any discrepancies in how different screen readers interpret CSS, ensuring that the intended reading order is maintained.
+			Moreover, it is imperative to test webpages across various screen readers to ensure a consistent 
+			and accessible user experience. By doing so, developers can identify and rectify any discrepancies 
+			in how different screen readers interpret CSS, ensuring that the intended reading order is maintained.
 			</br>
-			In summary, while some screen readers excel in interpreting CSS styling, it is crucial to prioritize a robust and well-organized HTML structure. Aligning the HTML layout with the natural flow of content, akin to a printed document, enhances the accessibility of web content for users with diverse needs. Developers should continually refine and test their HTML structures to guarantee an inclusive digital experience across a spectrum of assistive technologies.
+			In summary, while some screen readers excel in interpreting CSS styling, it is crucial to prioritize 
+			a robust and well-organized HTML structure. Aligning the HTML layout with the natural flow of content, 
+			akin to a printed document, enhances the accessibility of web content for users with diverse needs. 
+			Developers should continually refine and test their HTML structures to guarantee an inclusive digital 
+			experience across a spectrum of assistive technologies.
 		</div>
 	</div>
 		<div style = "margin-top: 30; padding-bottom: 30;">
