--- a/Webpage/problem_1.html
+++ b/Webpage/problem_1.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Index</title>
+    <title>Problem 1</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
 	<link rel="stylesheet" href="./des.css" type="text/css">
     <!--link rel="shortcut icon" href="favicon.ico" type="image/x-icon"!-->
@@ -85,29 +85,35 @@
 	<div style = "width: 100%; height: auto;">
 		<div class = "coloredText4">
 			
-			Keyboard accessibility refers to the ability for users to navigate and interact with websites or applications using the keyboard instead of a mouse. It's particularly beneficial for individuals with visual impairments or those who find it challenging to use a mouse, enhancing accessibility for all users.
+			Keyboard accessibility refers to the ability for users to navigate and interact with websites or 
+			applications using a keyboard instead of a mouse. It's particularly useful for individuals with visual 
+			impairments or those who find it challenging to use a mouse, enhancing accessibility for all users.
 			</br>
-			Keyboard accessibility is facilitated through various keyboard shortcuts and commands. Let me elaborate on some key functions:
+			Keyboard accessibility is facilitated through various keyboard shortcuts and commands.
 			</br>
-			Tab Key: Pressing the Tab key allows users to navigate through different elements on a web page or software interface. It typically moves the focus between links, buttons, form fields, and other interactive elements. Shift + Tab allows backward navigation.
 			</br>
-			Enter Key: The Enter key activates selected elements, such as links or buttons, and can also submit forms or confirm selections.
+			Here are such key functions:
 			</br>
-			Arrow Keys: The arrow keys—up, down, left, and right—are used for scrolling or selecting items within menus or lists. They are especially helpful for navigating dropdown menus or lists.
+			<b>Tab Key</b>: Pressing the Tab key allows users to navigate through different elements on a web page or software interface. It typically moves the focus between links, buttons, form fields, and other interactive elements. Shift + Tab allows backward navigation.
 			</br>
-			Spacebar: The Spacebar is often used to activate or select the currently focused item. It's commonly utilized for scrolling pages or selecting items within a list.
+			<b>Enter Key</b>: The Enter key activates selected elements, such as links or buttons, and can also submit forms or confirm selections.
 			</br>
-			Esc Key: Pressing the Esc key typically closes modal windows or cancels the current action.
+			<b>Arrow Keys</b>: The arrow keys—up, down, left, and right—are used for scrolling or selecting items within menus or lists. They are especially helpful for navigating dropdown menus or lists.
+			</br>
+			<b>Spacebar</b>: The Spacebar is often used to activate or select the currently focused item. It's commonly utilized for scrolling pages or selecting items within a list.
+			</br>
+			<b>Esc Key</b>: Pressing the Esc key typically closes modal windows or cancels the current action.
+			</br>
 			</br>
 			These keyboard functionalities enable users to navigate, select, and interact with web content or applications effectively without relying on a mouse. They significantly contribute to improving accessibility for individuals with disabilities and enhance the overall user experience for everyone.
 
 		</div>
 	</div>
-		<div style = "margin-top: 30; padding-bottom: 30;">
-		<form autocomplete='off' id = 'submitform'>
-		  <input id = 'passcode' type='text' required><br><br>
-		</form>
-		<button type = 'submit' id = 'sbtn' form = 'submitform'>Submit</button>
+		<div style = "margin: 30 100 0 100;">
+		<div style = "width: 350px; height: auto; display: inline-block; margin: 0 0 30 0;">
+			<div class = "p1button", style = "font-size: 25px; height: 50px"> Ok, Let's proceed. </div>
+		<div>
+	</div>
 	</div>
   </body>
 </html>
