modify tabindex, add focus style on button

--- a/Webpage/problem_2.html
+++ b/Webpage/problem_2.html
@@ -77,9 +77,9 @@
   </script>
   <body style = "background: #CC4400;">
     <div class = "topBar" style = "position: relative">
-	 <div class="top-selected" id = "original">Original Intend</div>
-	  <div class="top" id = "colorblind">Color Blind</div>
-	  <div class="top" id = "lowvision">Low Vision</div>
+	<div class="top-selected" tabIndex="1" id = "original">Original Intend</div>
+	<div class="top" tabIndex="2" id = "colorblind">Color Blind</div>
+	<div class="top" tabIndex="3" id = "lowvision">Low Vision</div>
 	</div>
 	<h2 style = "font-size: 30px">Problem 2</h2>
 	<div style = "width: 100%; height: auto;">
