--- a/Webpage/problem_1.html
+++ b/Webpage/problem_1.html
@@ -77,9 +77,9 @@
   </script>
   <body style = "background: #CC4400;">
     <div class = "topBar" style = "position: relative">
-	 <div class="top-selected" id = "original">Original Intend</div>
-	  <div class="top" id = "colorblind">Color Blind</div>
-	  <div class="top" id = "lowvision">Low Vision</div>
+	<div class="top-selected" tabIndex="1" id = "original">Original Intend</div>
+	<div class="top" tabIndex="2" id = "colorblind">Color Blind</div>
+	<div class="top" tabIndex="3" id = "lowvision">Low Vision</div>
 	</div>
 	<h2 style = "font-size: 30px">Problem 1</h2>
 	<div style = "width: 100%; height: auto;">
@@ -111,7 +111,7 @@
 	</div>
 		<div style = "margin: 30 100 0 100;">
 		<div style = "width: 350px; height: auto; display: inline-block; margin: 0 0 30 0;">
-			<div class = "p1button", style = "font-size: 25px; height: 50px"> Ok, Let's proceed. </div>
+			<button onclick="location.href='problem_2.html'" class = "p1button" tabIndex="30"> Ok, Let's proceed. </div>
 		<div>
 	</div>
 	</div>
