--- a/Webpage/index.html
+++ b/Webpage/index.html
@@ -93,7 +93,7 @@
 	</div>
 	<div style = "margin: 30 100 0 100;">
 		<div style = "width: 350px; height: auto; display: inline-block; margin: 0 0 30 0;">
-			<button onclick="location.href='problem_1.html'" class = "indexbutton"> Start </div>
+			<button onclick="location.href='problem_1.html'" class = "indexbutton"> Start </button>
 		<div>
 	</div>
   </body>
