--- a/Webpage/problem_1.html
+++ b/Webpage/problem_1.html
@@ -83,6 +83,17 @@
 	</div>
 	<h2 style = "font-size: 30px">Problem 1</h2>
 	<div style = "width: 100%; height: auto;">
+		<div class = "popUpWrapper" style = "opacity: 0; top: 40px; min-height: calc(100% - 40px);">
+		</div>
+		<div class = "sidebarArea">
+			<button onclick="location.href='https://www.naver.com'" class = "p1sbb" tabIndex="4"> Naver </button>
+			<button onclick="location.href='https://www.naver.com'" class = "p1sbb" tabIndex="5"> Naver </button>
+			<button onclick="location.href='https://www.naver.com'" class = "p1sbb" tabIndex="6"> Naver </button>
+			<button onclick="location.href='https://www.naver.com'" class = "p1sbb" tabIndex="7"> Naver </button>
+			<button onclick="location.href='https://www.naver.com'" class = "p1sbb" tabIndex="8"> Naver </button>
+			<button onclick="location.href='https://www.naver.com'" class = "p1sbb" tabIndex="9"> Naver </button>
+			<button onclick="location.href='https://www.naver.com'" class = "p1sbb" tabIndex="10"> Naver </button>
+		</div>
 		<div class = "coloredText4">
 			
 			Keyboard accessibility refers to the ability for users to navigate and interact with websites or 
@@ -108,10 +119,19 @@
 			These keyboard functionalities enable users to navigate, select, and interact with web content or applications effectively without relying on a mouse. They significantly contribute to improving accessibility for individuals with disabilities and enhance the overall user experience for everyone.
 
 		</div>
+		<div class = "sidebarArea">
+			<button onclick="location.href='https://www.naver.com'" class = "p1sbb" tabIndex="11"> Naver </button>
+			<button onclick="location.href='https://www.naver.com'" class = "p1sbb" tabIndex="12"> Naver </button>
+			<button onclick="location.href='https://www.naver.com'" class = "p1sbb" tabIndex="13"> Naver </button>
+			<button onclick="location.href='https://www.naver.com'" class = "p1sbb" tabIndex="14"> Naver </button>
+			<button onclick="location.href='https://www.naver.com'" class = "p1sbb" tabIndex="15"> Naver </button>
+			<button onclick="location.href='https://www.naver.com'" class = "p1sbb" tabIndex="16"> Naver </button>
+			<button onclick="location.href='https://www.naver.com'" class = "p1sbb" tabIndex="17"> Naver </button>
+		</div>
 	</div>
 		<div style = "margin: 30 100 0 100;">
 		<div style = "width: 350px; height: auto; display: inline-block; margin: 0 0 30 0;">
-			<button onclick="location.href='problem_2.html'" class = "p1button" tabIndex="30"> Ok, Let's proceed. </div>
+			<button onclick="location.href='problem_2.html'" class = "p1button" tabIndex="30"> Ok, Let's proceed. </button>
 		<div>
 	</div>
 	</div>
