--- a/Webpage/problem_3.html
+++ b/Webpage/problem_3.html
@@ -83,6 +83,7 @@
 	</div>
 	<h2 style = "font-size: 30px">Problem 3</h2>
 	<div style = "width: 100%; height: auto;">
+		<div class = "sidebarArea"></div>
 		<div class = "coloredText4">
 			Screen readers vary in their ability to interpret and vocalize the CSS styling of a webpage. 
 			While some are adept at detecting and reading CSS, others predominantly rely on the unadorned HTML structure. 
@@ -112,6 +113,7 @@
 			Developers should continually refine and test their HTML structures to guarantee an inclusive digital 
 			experience across a spectrum of assistive technologies.
 		</div>
+		<div class = "sidebarArea"></div>
 	</div>
 		<div style = "margin-top: 30; padding-bottom: 30;">
 		<form autocomplete='off' id = 'submitform'>
