--- a/Webpage/problem_4.html
+++ b/Webpage/problem_4.html
@@ -83,6 +83,7 @@
 	</div>
 	<h2 style = "font-size: 30px">Problem 4</h2>
 	<div style = "width: 100%; height: auto;">
+		<div class = "sidebarArea"></div>
 		<div class = "coloredText4">
 			<h1>Unveiling the Web Accessibility Challenge: Missing or Inaccurate Alt Text</h1>
 
@@ -122,6 +123,7 @@
 			<h2>Conclusion</h2>
 			Addressing the challenge of missing or inaccurate alt text is pivotal for creating an inclusive online environment. By adopting best practices and considering the diverse needs of users, we can pave the way for a web landscape where everyone, regardless of ability, can access and appreciate digital content seamlessly.
 		</div>
+		<div class = "sidebarArea"></div>
 	</div>
 		<div style = "margin-top: 30; padding-bottom: 30;">
 		<form autocomplete='off' id = 'submitform'>
