--- a/Webpage/anscheck/prob2ans3.html
+++ b/Webpage/anscheck/prob2ans3.html
@@ -2,7 +2,7 @@
   <head>
     <title>Problem 2</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
-	<meta http-equiv="refresh" content="0; url='../problem3.html'">
+	<meta http-equiv="refresh" content="0; url='../problem_3.html'">
 	<!--link rel="stylesheet" href="/Webpage/des.css" type="text/css"-->
     <!--link rel="shortcut icon" href="favicon.ico" type="image/x-icon"!-->
     <!--link rel="icon" href="favicon.ico" type="image/x-icon"!-->
