--- a/Webpage/problem_3.html
+++ b/Webpage/problem_3.html
@@ -61,16 +61,20 @@
 	$("#original").click(original);
 	
 	function jsMove(){
-		//var baselink = "/Webpage/un1"
+		var baselink = "./anscheck/prob3ans"
 		var pc = document.getElementById('passcode').value;
 		if (pc){
-			window.alert("Answer Submitted. 404 Error means wrong answer. "+pc);
+			window.alert("Answer Submitted. 404 Error means wrong answer.");
+			//window.open((baselink.concat(pc)).concat(".html"));
+			var link = (baselink.concat(pc)).concat(".html");
+			//window.location.replace(link);
+			window.location.href = link;
 		}
 		else {
 			window.alert("Please fill the form.");
 		}
 		
-		//window.open(baselink.concat(pc));
+		
 	}
 	
 	$("#sbtn").click(jsMove);
@@ -83,8 +87,8 @@
 	</div>
 	<h2 style = "font-size: 30px">Problem 3</h2>
 	<div style = "width: 100%; height: auto;">
-		<div class = "sidebarArea"></div>
-		<div class = "coloredText4">
+		
+		<div class = "coloredText5">
 			Screen readers vary in their ability to interpret and vocalize the CSS styling of a webpage. 
 			While some are adept at detecting and reading CSS, others predominantly rely on the unadorned HTML structure. 
 			This diversity can pose challenges when screen readers prioritize content for users. It becomes 
@@ -113,13 +117,12 @@
 			Developers should continually refine and test their HTML structures to guarantee an inclusive digital 
 			experience across a spectrum of assistive technologies.
 		</div>
-		<div class = "sidebarArea"></div>
-	</div>
-		<div style = "margin-top: 30; padding-bottom: 30;">
+		
+	<div style = "margin-top: 30; padding-bottom: 30;">
 		<form autocomplete='off' id = 'submitform'>
 		  <input id = 'passcode' type='text' required><br><br>
 		</form>
-		<button type = 'submit' id = 'sbtn' form = 'submitform'>Submit</button>
+		<button id = 'sbtn'>Submit</button>
 	</div>
   </body>
 </html>
