--- a/Webpage/problem_4.html
+++ b/Webpage/problem_4.html
@@ -61,16 +61,20 @@
 	$("#original").click(original);
 	
 	function jsMove(){
-		//var baselink = "/Webpage/un1"
+		var baselink = "./anscheck/prob4ans"
 		var pc = document.getElementById('passcode').value;
 		if (pc){
-			window.alert("Answer Submitted. 404 Error means wrong answer. "+pc);
+			window.alert("Answer Submitted. 404 Error means wrong answer.");
+			//window.open((baselink.concat(pc)).concat(".html"));
+			var link = (baselink.concat(pc)).concat(".html");
+			//window.location.replace(link);
+			window.location.href = link;
 		}
 		else {
 			window.alert("Please fill the form.");
 		}
 		
-		//window.open(baselink.concat(pc));
+		
 	}
 	
 	$("#sbtn").click(jsMove);
@@ -83,8 +87,7 @@
 	</div>
 	<h2 style = "font-size: 30px">Problem 4</h2>
 	<div style = "width: 100%; height: auto;">
-		<div class = "sidebarArea"></div>
-		<div class = "coloredText4">
+		<div class = "coloredText5">
 			<h1>Unveiling the Web Accessibility Challenge: Missing or Inaccurate Alt Text</h1>
 
 			<h2>Introduction</h2>
@@ -123,13 +126,11 @@
 			<h2>Conclusion</h2>
 			Addressing the challenge of missing or inaccurate alt text is pivotal for creating an inclusive online environment. By adopting best practices and considering the diverse needs of users, we can pave the way for a web landscape where everyone, regardless of ability, can access and appreciate digital content seamlessly.
 		</div>
-		<div class = "sidebarArea"></div>
-	</div>
-		<div style = "margin-top: 30; padding-bottom: 30;">
+	<div style = "margin-top: 30; padding-bottom: 30;">
 		<form autocomplete='off' id = 'submitform'>
 		  <input id = 'passcode' type='text' required><br><br>
 		</form>
-		<button type = 'submit' id = 'sbtn' form = 'submitform'>Submit</button>
+		<button id = 'sbtn'>Submit</button>
 	</div>
   </body>
 </html>
