add icons, modify font color

--- a/Webpage/problem_4.html
+++ b/Webpage/problem_4.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Index</title>
+    <title>Problem 4</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
 	<link rel="stylesheet" href="./des.css" type="text/css">
     <!--link rel="shortcut icon" href="favicon.ico" type="image/x-icon"!-->
