--- a/Webpage/problem_2.html
+++ b/Webpage/problem_2.html
@@ -153,7 +153,7 @@
 			<div class = "horizontalBar"></div>
 			<p>
 			Question: Which of the following is the most appropriate explanation for the term 'Web Accessibility"? </br>
-			(Hint: When it's too hard to read the text, use the "color blind" filter.)
+			(Hint: When it's too hard to read the text, use the "color blind" filter.) </br>
 			<span>1. Web accessibility aims to provide easy access only for people with disabilities. </span></br>
 			<span>2. The most important thing when placing elements such as buttons or links is to place them in an aesthetically pleasing manner. </span></br>
 			<span>3. Using appropriate color contrasts for easy differentiation, employing readable fonts, and increasing font sizes are all examples of efforts toward web accessibility. </span></br>
