--- a/Webpage/problem_3.html
+++ b/Webpage/problem_3.html
@@ -89,33 +89,53 @@
 	<div style = "width: 100%; height: auto;">
 		
 		<div class = "coloredText5">
+			<p>
+			<audio controls style="width=250px;"><source src="samples/3.wav" type="audio/wav"></audio>
+			</br>
+			<b>To answer the question below, please listen to the screen reader result above.</b>
+			</br></br>
+			<!--<h3>Challenges in Screen Reading</h3>-->
 			Screen readers vary in their ability to interpret and vocalize the CSS styling of a webpage. 
 			While some are adept at detecting and reading CSS, others predominantly rely on the unadorned HTML structure. 
 			This diversity can pose challenges when screen readers prioritize content for users. It becomes 
 			crucial to establish a consistent and well-organized HTML structure that aligns with the logical 
 			reading order from left to right and top to bottom, akin to the flow of content in a printed document.
-			</br>
+			</br></br>
+			<!--<h3>Importance of Unstyled HTML</h3>-->
 			Understanding the nuances of how screen readers interpret CSS styling is paramount. Although some 
 			screen readers can extract meaning from CSS, ensuring a reliable and universally accessible experience 
 			necessitates an HTML structure that inherently conveys content hierarchy. This is particularly vital 
 			for users who heavily rely on unstyled HTML to comprehend the information presented.
-			</br>
+			</br></br>
+			<!--<h3>Importance of HTML structures</h3>-->
 			To circumvent potential challenges related to the reading order, developers should adhere to best 
 			practices in structuring HTML content. Employing semantic HTML elements, such as headings 
 			(&lt;h1&gt;, &lt;h2&gt;, etc.), paragraphs (&lt;p&gt;), and lists (&lt;ul&gt;, &lt;ol&gt;, &lt;li&gt;), 
 			contributes to a clear and well-defined document structure. These elements, when arranged logically, 
 			facilitate an intuitive reading experience for both screen readers that interpret CSS and those that 
 			primarily rely on unstyled HTML.
-			</br>
+			</br></br>
+			<!--<h3>Importance of Webpage Testing</h3>-->
 			Moreover, it is imperative to test webpages across various screen readers to ensure a consistent 
 			and accessible user experience. By doing so, developers can identify and rectify any discrepancies 
 			in how different screen readers interpret CSS, ensuring that the intended reading order is maintained.
-			</br>
+			</br></br>
+			<!--<h3>Summary</h3>-->
 			In summary, while some screen readers excel in interpreting CSS styling, it is crucial to prioritize 
 			a robust and well-organized HTML structure. Aligning the HTML layout with the natural flow of content, 
 			akin to a printed document, enhances the accessibility of web content for users with diverse needs. 
 			Developers should continually refine and test their HTML structures to guarantee an inclusive digital 
 			experience across a spectrum of assistive technologies.
+			</p>
+			<div class = "horizontalBar"></div>
+			<p>
+			Question: Which of the following is the right order of contents in the HTML document?</br>
+			Hint: Most screen reader reads HTML content with the order from left to right and top to bottom.</br>
+			<span>1. 1-3-4-2-5</span></br>
+			<span>2. 1-2-4-5-3</span></br>
+			<span>3. 3-1-2-4-5</span></br>
+			<span>4. 2-5-3-4-1</span></br>
+			</p>
 		</div>
 		
 	<div style = "margin-top: 30; padding-bottom: 30;">
