update popupdetector prototype, change license

--- a/ChromeExtension/PopupDetector/popup.html
+++ b/ChromeExtension/PopupDetector/popup.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="button.css">
 </head>
 <body>
-<button id="doFind"></button>
+<button id="doFind"> Let's find popups </button>
 <script src="popup.js"></script>
 </body>
 </html>
