--- a/Webpage/problem_4.html
+++ b/Webpage/problem_4.html
@@ -78,6 +78,14 @@
 	}
 	
 	$("#sbtn").click(jsMove);
+	
+	function hint(){
+		window.alert("Link is in an image.");
+		
+		
+	}
+	
+	$("#hint").click(hint);
   </script>
   <body style = "background: #CC4400;">
     <div class = "topBar" style = "position: relative">
@@ -97,26 +105,39 @@
 			Alt text, or alternative text, is a crucial element in web design that provides a textual description of images for screen readers. Screen readers rely on this alt text to convey the content and meaning of images to users who may not be able to perceive them visually. However, when alt text is missing or inaccurately described, it creates a void in the user experience and poses several challenges.
 
 			<h3>1. Loss of Context</h3>
-			Imagine navigating a webpage filled with images that lack proper alt text. Users with visual impairments are left in the dark, missing out on essential context and information conveyed through those images. This can be especially problematic when images serve as links, buttons, or convey critical content integral to the understanding of the page.
-
+			Imagine navigating a webpage filled with images that lack proper alt text like below. 
+			<img src="4_1.png" alt="This is an image." width="400px"></br>
+			Users with visual impairments are left in the dark, missing out on essential context and information conveyed through those images. This can be especially problematic when images serve as links, buttons, or convey critical content integral to the understanding of the page.
+			
 			<h3>2. Navigational Hurdles</h3>
-			For users heavily reliant on screen readers, navigating a site becomes akin to solving a puzzle with missing pieces when alt text is absent. Without accurate descriptions, users may struggle to comprehend the purpose of images, leading to confusion about the page's structure and content flow.
-
+			For users heavily reliant on screen readers, navigating a site becomes akin to solving a puzzle with missing pieces when it does not has appropriate form. Without accurate descriptions, users may struggle to comprehend the purpose of links, leading to confusion about the page's structure and content flow.
+			For exmple, we can make a better link like "Check <a href="https://fuzzymath.com/blog/improve-accessibility-for-visually-impaired-users/" title="">an article about web accessibility improvement</a>" instead of just "Click <a href="https://fuzzymath.com/blog/improve-accessibility-for-visually-impaired-users/" title="">here</a>" or <a href="https://fuzzymath.com/blog/improve-accessibility-for-visually-impaired-users/" title="">https://fuzzymath.com/blog/improve-accessibility-for-visually-impaired-users/</a> to provide more information to screen readers.
+			Similarily, a text which looks like <u style="color:blue">a link</u> is also problematic.
+			
 			<h3>3. Exclusion from Multimedia Content</h3>
 			Web content is becoming increasingly multimedia-rich, with images, infographics, and videos enhancing the overall experience. However, without proper alt text, individuals with visual impairments are excluded from this visual feast, limiting their access to the complete narrative woven by the content creator.
-
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/20SHvU2PKsM" title="Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+			
+			
 			<h3>4. Impact on Educational Resources</h3>
-			In educational contexts, where online materials supplement learning, missing or inaccurate alt text can impede students with visual impairments from fully engaging with the course content. Diagrams, charts, and other visual aids lose their educational value when their meaning is not adequately conveyed.
-
+			In educational contexts, where online materials supplement learning, missing or inaccurate alt text can impede students with visual impairments from fully engaging with the course content. Diagrams, charts, and other visual aids like an example below lose their educational value when their meaning is not adequately conveyed. For example, can you fully understand the contents in the image below with only explanation in its alt text?
+			</br><img src="4_2.png" alt="Estimated population, fertility rate and net reproduction rate of South Korea" width="800px">
+			
 			<h2>Solutions and Best Practices</h2>
 			To tackle the challenge of missing or inaccurate alt text, web developers and content creators can implement several best practices:
 
 			<h3>1. Thorough Alt Text Descriptions</h3>
-			Ensure that alt text provides a comprehensive and accurate description of the image, conveying its purpose and context effectively.
+			Ensure that alt text provides a comprehensive and accurate description of the image, conveying its purpose and context effectively.	
+			</br>
+			<a href="problem_5.html" height="5" width="10" target="_blank">
+				<img src="4_3.jpeg" alt="Image of a duck stealing money from a woman whose attention has been sold to its ducklings" width="400px">
+			<a>
 
+			<div style="background-image: url(4_4.jpg);" title="background image">
 			<h3>2. Decorative Image Handling</h3>
-			Use empty or null alt text for decorative images to signal to screen readers that these images don't convey meaningful content.
-
+			Use empty or null alt text for decorative images to signal to screen readers that these images don't convey meaningful content. This paragraph is an example of misuse of decorative image which has 'title' attribute in its tag.
+			</div>
+			
 			<h3>3. Automated Tools and Validators</h3>
 			Employ accessibility tools and validators during the development phase to identify missing or inaccurate alt text and address issues promptly.
 
@@ -125,12 +146,14 @@
 
 			<h2>Conclusion</h2>
 			Addressing the challenge of missing or inaccurate alt text is pivotal for creating an inclusive online environment. By adopting best practices and considering the diverse needs of users, we can pave the way for a web landscape where everyone, regardless of ability, can access and appreciate digital content seamlessly.
+			
+			<div class = "horizontalBar"></div>
+			Mission: Find the link to the next page in this page.</br>
+			Hint: Press hint button below if you want to get a hint.</br>
+			<div style = "margin-top: 30; padding-bottom: 30;">
+				<button id = 'hint'>Hint</button>
+			</div>
 		</div>
-	<div style = "margin-top: 30; padding-bottom: 30;">
-		<form autocomplete='off' id = 'submitform'>
-		  <input id = 'passcode' type='text' required><br><br>
-		</form>
-		<button id = 'sbtn'>Submit</button>
 	</div>
   </body>
 </html>
