Modify problem 4 and last page

--- a/Webpage/Congratulations.html
+++ b/Webpage/Congratulations.html
@@ -84,7 +84,7 @@
 			If you want to learn more about web accessibility, click the link below.
 			</br>
 			</br>
-			<span style="color: #00FFFF; text-decoration: underline">https://www.w3.org/WAI/fundamentals/accessibility-intro/</span>
+			<a href="https://www.w3.org/WAI/fundamentals/accessibility-intro/" title="">Web Accessibility Initiative</a>
 			</br>
 			</br>
 			Thank you for participating.
