--- a/Webpage/Congratulations.html
+++ b/Webpage/Congratulations.html
@@ -87,7 +87,7 @@
 			<a href="https://www.w3.org/WAI/fundamentals/accessibility-intro/" title="">Web Accessibility Initiative</a>
 			</br>
 			</br>
-			Thank you for participating.
+			Thank you for your participation.
 		</div>
 	</div>
 	<div style = "margin: 100 100 0 100;">
