--- a/Webpage/popup.html
+++ b/Webpage/popup.html
@@ -80,8 +80,8 @@
 	</div>
 	<div class = "imagewrapper" style="height: 360px;">
 		<div class = "loader">
-			<div class = "imagebox"><img src = "damgom.gif" alt = "Wrong alternative text example"></div>
-			<img src = "dd.gif" style="opacity: 50%;">
+			<div class = "imagebox"><img src = "samples/damgom.gif" alt = "Wrong alternative text example"></div>
+			<img src = "samples/dd.gif" style="opacity: 50%;">
 			</div>
 	</div>
 	<div class = "coloredText2">
@@ -113,7 +113,7 @@
 	<div class = "popUpBox" id = "popupBox">
 		<button class = "clsbtn" id = "clsbtn">close<br>button</button>
 		<div class = "imgarea">
-			<img src = "ctd.jpg" style = "width: 100%; height: 100%">
+			<img src = "samples/ctd.jpg" style = "width: 100%; height: 100%">
 		</div>
 	</div>
 	
