--- a/Webpage/problem_4.html
+++ b/Webpage/problem_4.html
@@ -81,8 +81,6 @@
 	
 	function hint(){
 		window.alert("Link is in an image.");
-		
-		
 	}
 	
 	$("#hint").click(hint);
@@ -106,7 +104,7 @@
 
 			<h3>1. Loss of Context</h3>
 			Imagine navigating a webpage filled with images that lack proper alt text like below. 
-			<img src="4_1.png" alt="This is an image." width="400px"></br>
+			<img src="samples/4_1.png" alt="This is an image." width="400px"></br>
 			Users with visual impairments are left in the dark, missing out on essential context and information conveyed through those images. This can be especially problematic when images serve as links, buttons, or convey critical content integral to the understanding of the page.
 			
 			<h3>2. Navigational Hurdles</h3>
@@ -121,7 +119,7 @@
 			
 			<h3>4. Impact on Educational Resources</h3>
 			In educational contexts, where online materials supplement learning, missing or inaccurate alt text can impede students with visual impairments from fully engaging with the course content. Diagrams, charts, and other visual aids like an example below lose their educational value when their meaning is not adequately conveyed. For example, can you fully understand the contents in the image below with only explanation in its alt text?
-			</br><img src="4_2.png" alt="Estimated population, fertility rate and net reproduction rate of South Korea" width="800px">
+			</br><img src="samples/4_2.png" alt="Estimated population, fertility rate and net reproduction rate of South Korea" width="800px">
 			
 			<h2>Solutions and Best Practices</h2>
 			To tackle the challenge of missing or inaccurate alt text, web developers and content creators can implement several best practices:
@@ -130,10 +128,10 @@
 			Ensure that alt text provides a comprehensive and accurate description of the image, conveying its purpose and context effectively.	
 			</br>
 			<a href="problem_5.html" height="5" width="10" target="_blank">
-				<img src="4_3.jpeg" alt="Image of a duck stealing money from a woman whose attention has been sold to its ducklings" width="400px">
+				<img src="samples/4_3.jpeg" alt="Image of a duck stealing money from a woman whose attention has been sold to its ducklings" width="400px">
 			</a>
 
-			<div style="background-image: url(4_4.jpg);" title="background image">
+			<div style="background-image: url(samples/4_4.jpg);" title="background image">
 			<h3>2. Decorative Image Handling</h3>
 			Use empty or null alt text for decorative images to signal to screen readers that these images don't convey meaningful content. This paragraph is an example of misuse of decorative image which has 'title' attribute in its tag.
 			</div>
