--- a/Webpage/index.html
+++ b/Webpage/index.html
@@ -66,7 +66,7 @@
 	  <div class="top" tabIndex="2" id = "colorblind">Color Blind</div>
 	  <div class="top" tabIndex="3" id = "lowvision">Low Vision</div>
 	</div>
-	<h1 class = "coloredText1">PleaseDoNotAccess.io</h1>
+	<div class = "coloredText1">PleaseDoNotAccess.io</div>
 	<div style = "width: 100%; height: auto;">
 		<div class = "whitext">
 			Hello? Welcome to <span style="color: #00FFFF; text-decoration: underline">PleaseDoNotAccess.io</span>. This project was created to enhance people's understanding
