--- a/Webpage/problem_1.html
+++ b/Webpage/problem_1.html
@@ -86,13 +86,13 @@
 		<div class = "popUpWrapper" style = "opacity: 0; top: 40px; min-height: calc(100% - 40px);">
 		</div>
 		<div class = "sidebarArea">
-			<button onclick="location.href='https://www.naver.com'" class = "p1sbb" tabIndex="4"> Naver </button>
 			<button onclick="location.href='https://www.naver.com'" class = "p1sbb" tabIndex="5"> Naver </button>
-			<button onclick="location.href='https://www.naver.com'" class = "p1sbb" tabIndex="6"> Naver </button>
-			<button onclick="location.href='https://www.naver.com'" class = "p1sbb" tabIndex="7"> Naver </button>
-			<button onclick="location.href='https://www.naver.com'" class = "p1sbb" tabIndex="8"> Naver </button>
-			<button onclick="location.href='https://www.naver.com'" class = "p1sbb" tabIndex="9"> Naver </button>
-			<button onclick="location.href='https://www.naver.com'" class = "p1sbb" tabIndex="10"> Naver </button>
+			<button onclick="location.href='https://coinse.github.io'" class = "p1sbb" tabIndex="4"> Coinse Lab </button>
+			<button onclick="location.href='https://bioeng.kaist.ac.kr/'" class = "p1sbb" tabIndex="16"> KAIST BBE </button>
+			<button onclick="location.href='https://cs.kaist.ac.kr/'" class = "p1sbb" tabIndex="7"> KAIST CS </button>
+			<button onclick="location.href='https://ee.kaist.ac.kr/'" class = "p1sbb" tabIndex="11"> KAIST EE </button>
+			<button onclick="location.href='https://github.com'" class = "p1sbb" tabIndex="9"> Github </button>
+			<button onclick="location.href='https://www.stackoverflow.com/'" class = "p1sbb" tabIndex="10"> Stack Overflow </button>
 		</div>
 		<div class = "coloredText4">
 			
@@ -120,13 +120,13 @@
 
 		</div>
 		<div class = "sidebarArea">
-			<button onclick="location.href='https://www.naver.com'" class = "p1sbb" tabIndex="11"> Naver </button>
-			<button onclick="location.href='https://www.naver.com'" class = "p1sbb" tabIndex="12"> Naver </button>
-			<button onclick="location.href='https://www.naver.com'" class = "p1sbb" tabIndex="13"> Naver </button>
-			<button onclick="location.href='https://www.naver.com'" class = "p1sbb" tabIndex="14"> Naver </button>
-			<button onclick="location.href='https://www.naver.com'" class = "p1sbb" tabIndex="15"> Naver </button>
-			<button onclick="location.href='https://www.naver.com'" class = "p1sbb" tabIndex="16"> Naver </button>
-			<button onclick="location.href='https://www.naver.com'" class = "p1sbb" tabIndex="17"> Naver </button>
+			<button onclick="location.href='https://x.com'" class = "p1sbb" tabIndex="13"> X (Previously Twitter) </button>
+			<button onclick="location.href='https://www.wolframalpha.com'" class = "p1sbb" tabIndex="17"> Wolfram alpha </button>
+			<button onclick="location.href='https://chat.openai.com'" class = "p1sbb" tabIndex="8"> ChatGPT </button>
+			<button onclick="location.href='https://www.facebook.com'" class = "p1sbb" tabIndex="14"> Facebook </button>
+			<button onclick="location.href='https://www.instagram.com/'" class = "p1sbb" tabIndex="15"> Instagram </button>
+			<button onclick="location.href='index.html'" class = "p1sbb" tabIndex="6"> Please Do Not Access </button>
+			<button onclick="location.href='https://www.Youtube.com'" class = "p1sbb" tabIndex="12"> Youtube </button>
 		</div>
 	</div>
 		<div style = "margin: 30 100 0 100;">
