--- a/Webpage/Congratulations.html
+++ b/Webpage/Congratulations.html
@@ -66,17 +66,25 @@
 	  <div class="top" tabIndex="2" id = "colorblind">Color Blind</div>
 	  <div class="top" tabIndex="3" id = "lowvision">Low Vision</div>
 	</div>
-	<h1 class = "whitext">Congratulations</h1>
+	<div class = "coloredText1">Congratulations!</div>
 	<div style = "width: 100%; height: auto;">
 		<div class = "whitext">
 			Congratulations. You've reached the last page.
+			</br>
+			</br>
+			<div class = "imagewrapper" style="height: 360px;">
+				<div class = "loader">
+					<div class = "imagebox"><img src = "samples/chickendance.gif" style = "height: 360px; width: auto;" alt = "Wrong alternative text example"></div>
+					<img src = "samples/cc.gif" style="opacity: 50%; height: 360px; width: auto;">
+					</div>
+			</div>
 			</br>
 			</br>
 			You would have been able to learn about and directly experience some of the issues
 			related to web accessibility through this webpage.
 			</br>
 			</br> 
-			Apart from these elements, as shown in the image below,
+			Apart from these elements, as shown in the image above,
 			there are many more aspects to consider for web accessibility,
 			such as internet connection speed.
 			</br>
@@ -84,10 +92,14 @@
 			If you want to learn more about web accessibility, click the link below.
 			</br>
 			</br>
-			<a href="https://www.w3.org/WAI/fundamentals/accessibility-intro/" title="">Web Accessibility Initiative</a>
+			<a href="https://www.w3.org/WAI/fundamentals/accessibility-intro/" title="Web Accessibility Initiative">Web Accessibility Initiative</a>
 			</br>
 			</br>
 			Thank you for your participation.
+			</br>
+			</br>
+			</br>
+			<a href="index.html" title="Main page" style = "text-decoration: none;"><div style = "font-size: 70px;	font-weight: 700;">PleaseDoNotAccess.io</div></a>
 		</div>
 	</div>
 	<div style = "margin: 100 100 0 100;">
