--- a/Webpage/problem_4.html
+++ b/Webpage/problem_4.html
@@ -110,7 +110,7 @@
 			<h3>2. Navigational Hurdles</h3>
 			For users heavily reliant on screen readers, navigating a site becomes akin to solving a puzzle with missing pieces when it does not has appropriate form. Without accurate descriptions, users may struggle to comprehend the purpose of links, leading to confusion about the page's structure and content flow.
 			For exmple, we can make a better link like "Check <a href="https://fuzzymath.com/blog/improve-accessibility-for-visually-impaired-users/" title="">an article about web accessibility improvement</a>" instead of just "Click <a href="https://fuzzymath.com/blog/improve-accessibility-for-visually-impaired-users/" title="">here</a>" or <a href="https://fuzzymath.com/blog/improve-accessibility-for-visually-impaired-users/" title="">https://fuzzymath.com/blog/improve-accessibility-for-visually-impaired-users/</a> to provide more information to screen readers.
-			Similarily, a text which looks like <u style="color:blue">a link</u> is also problematic.
+			Similarily, a text which looks like <u class = "pseudoa">a link</u> is also problematic.
 			
 			<h3>3. Exclusion from Multimedia Content</h3>
 			Web content is becoming increasingly multimedia-rich, with images, infographics, and videos enhancing the overall experience. However, without proper alt text, individuals with visual impairments are excluded from this visual feast, limiting their access to the complete narrative woven by the content creator.
@@ -127,7 +127,7 @@
 			<h3>1. Thorough Alt Text Descriptions</h3>
 			Ensure that alt text provides a comprehensive and accurate description of the image, conveying its purpose and context effectively.	
 			</br>
-			<a href="problem_5.html" height="5" width="10" target="_blank">
+			<a href="Congratulations.html" height="5" width="10" target="_blank">
 				<img src="samples/4_3.jpeg" alt="Image of a duck stealing money from a woman whose attention has been sold to its ducklings" width="400px">
 			</a>
 
