--- a/Webpage/Congratulations.html
+++ b/Webpage/Congratulations.html
@@ -92,7 +92,7 @@
 			If you want to learn more about web accessibility, click the link below.
 			</br>
 			</br>
-			<a href="https://www.w3.org/WAI/fundamentals/accessibility-intro/" title="Web Accessibility Initiative">Web Accessibility Initiative</a>
+			<a href="https://www.w3.org/WAI/fundamentals/accessibility-intro/" title="Web Accessibility Initiative" target="_blank">Web Accessibility Initiative</a>
 			</br>
 			</br>
 			Thank you for your participation.
