--- a/Webpage/problem_2.html
+++ b/Webpage/problem_2.html
@@ -163,9 +163,7 @@
 		
 	</div>
 	<div style = "margin-top: 30; padding-bottom: 30;">
-		<form autocomplete='off' id = 'submitform'>
-		  <input id = 'passcode' type='text' required><br><br>
-		</form>
+		<input id = 'passcode' type='text' required style = "margin-bottom: 20px"><br><br>
 		<button id = 'sbtn'>Submit</button>
 	</div>
   </body>
