--- a/Webpage/problem_4.html
+++ b/Webpage/problem_4.html
@@ -127,7 +127,7 @@
 			<h3>1. Thorough Alt Text Descriptions</h3>
 			Ensure that alt text provides a comprehensive and accurate description of the image, conveying its purpose and context effectively.	
 			</br>
-			<a href="Congratulations.html" height="5" width="10" target="_blank">
+			<a href="Congratulations.html" height="5" width="10">
 				<img src="samples/4_3.jpeg" alt="Image of a duck stealing money from a woman whose attention has been sold to its ducklings" width="400px">
 			</a>
 
@@ -146,7 +146,9 @@
 			Addressing the challenge of missing or inaccurate alt text is pivotal for creating an inclusive online environment. By adopting best practices and considering the diverse needs of users, we can pave the way for a web landscape where everyone, regardless of ability, can access and appreciate digital content seamlessly.
 			
 			<div class = "horizontalBar"></div>
-			Mission: Find the link to the next page in this page.</br>
+			One of the links in this page will bring you to the next page.</br>
+			<b>Mission:</b> Find the link to the next page in this page.</br>
+			</br>
 			Hint: Press hint button below if you want to get a hint.</br>
 			<div style = "margin-top: 30; padding-bottom: 30;">
 				<button id = 'hint'>Hint</button>
